<resources>
    <string name="app_name">MediaPlayerRemote</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_play_list">Play list</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="power_off_the_player">Power off the player</string>
    <string name="set_sound_mute_or_unmute">Set sound mute or unmute</string>
    <string name="title_authentication">Authentication</string>
    <string name="title_api">API</string>
    <string name="title_servers">Servers</string>
    <string name="title_server">Server</string>
    <string name="title_username">User</string>
    <string name="title_password">Password</string>
    <string name="title_network">Wifi network</string>
    <string name="title_ip_address">IPv4 address</string>
    <string name="title_ssid">SSID</string>
    <string name="server">server</string>
</resources>